# Tempo-Assist-2.0

./: .gitignore  LICENSE  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
android/app/: build.gradle
android/app/src/main/java/com/astraea/tempoassist/: MainActivity.java
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  storage.rs
src/lib/: browserStore.ts  reminderApi.ts
src/shared/: types.ts
